--- a/AccountingOfEquipmentInventoryManagementApp/Views/Windows/OperatorWindow.xaml
+++ b/AccountingOfEquipmentInventoryManagementApp/Views/Windows/OperatorWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:AccountingOfEquipmentInventoryManagementApp.ViewModels"
-        Title="Оператор — Учёт оборудования" Height="600" Width="1000">
+        Title="Оператор" Height="600" Width="1000">
     <Window.DataContext>
         <local:OperatorViewModel/>
     </Window.DataContext>
