--- a/AccountingOfEquipmentInventoryManagementApp/Views/Windows/AdministratorWindow.xaml
+++ b/AccountingOfEquipmentInventoryManagementApp/Views/Windows/AdministratorWindow.xaml
@@ -1,79 +1,107 @@
 ﻿<Window x:Class="AccountingOfEquipmentInventoryManagementApp.Views.Windows.AdministratorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:sys="clr-namespace:System;assembly=mscorlib"
-        Title="Администратор" Height="750" Width="1245">
-    <Grid Margin="10">
+        xmlns:helpers="clr-namespace:AccountingOfEquipmentInventoryManagementApp.Helpers"
+        Title="Администратор" Height="750" Width="1245"
+        WindowStyle="None" AllowsTransparency="True" Background="White">
+
+    <Grid>
         <Grid.RowDefinitions>
-            <!-- Панель для добавления нового сотрудника -->
-            <RowDefinition Height="Auto"/>
-            <!-- Панель для управления: поиск, редактирование, удаление, экспорт -->
-            <RowDefinition Height="Auto"/>
-            <!-- DataGrid со списком сотрудников -->
+            <RowDefinition Height="40"/>
+            <!-- Панель управления окном -->
             <RowDefinition Height="*"/>
+            <!-- Основной контент -->
         </Grid.RowDefinitions>
 
-        <!-- Группа для добавления нового сотрудника -->
-        <GroupBox Header="Добавление нового сотрудника" Grid.Row="0" Margin="0,0,0,10">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="250"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="250"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="200"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="200"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-
-                <!-- ФИО сотрудника -->
-                <Label Grid.Column="0" Content="ФИО:" VerticalAlignment="Center" Margin="5"/>
-                <TextBox Grid.Column="1" x:Name="tbFullName" Margin="5"/>
-
-                <!-- Имя пользователя -->
-                <Label Grid.Column="2" Content="Имя пользователя:" VerticalAlignment="Center" Margin="5"/>
-                <TextBox Grid.Column="3" x:Name="tbUsername" Margin="5"/>
-
-                <!-- Пароль -->
-                <Label Grid.Column="4" Content="Пароль:" VerticalAlignment="Center" Margin="5"/>
-                <PasswordBox Grid.Column="5" x:Name="pbPassword" Margin="5"/>
-
-                <!-- Роль сотрудника -->
-                <Label Grid.Column="6" Content="Роль:" VerticalAlignment="Center" Margin="5"/>
-                <ComboBox Grid.Column="7" x:Name="cbAccessRole" Margin="5"/>
-            </Grid>
-        </GroupBox>
-
-        <!-- Панель для управления записями -->
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,0,0,10">
-            <Button x:Name="btnAddEmployee" Content="Добавить сотрудника" Width="160" Margin="5" Click="btnAddEmployee_Click"/>
-            <Button x:Name="btnEditEmployee" Content="Редактировать" Width="140" Margin="5" Click="btnEditEmployee_Click"/>
-            <Button x:Name="btnDeleteEmployee" Content="Удалить выбранных" Width="160" Margin="5" Click="btnDeleteEmployee_Click"/>
-
-            <TextBox x:Name="tbSearch" Width="250" Margin="5" VerticalAlignment="Center" 
-               ToolTip="Введите ФИО или имя пользователя для поиска"/>
-            <Button x:Name="btnSearch" Content="Поиск" Width="120" Margin="5" Click="btnSearch_Click"/>
-            <Button x:Name="btnExportCsv" Content="Экспорт" Width="160" Margin="5" Click="btnExportCsv_Click"/>
+        <!-- Верхняя панель управления окном -->
+        <StackPanel Orientation="Horizontal"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    Margin="1120,0,0,0"
+                    Grid.Row="0" Height="40">
+            <Button Width="30" Height="30" Content="−"
+                    Command="{Binding WindowControls.MinimizeCommand}"
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
+                    ToolTip="Свернуть"/>
+            <Button Width="30" Height="30" Content="☐"
+                    Command="{Binding WindowControls.MaximizeCommand}"
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
+                    ToolTip="Развернуть"/>
+            <Button Width="30" Height="30" Content="✖"
+                    Command="{Binding WindowControls.CloseCommand}"
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
+                    ToolTip="Закрыть"/>
         </StackPanel>
 
-        <!-- DataGrid для отображения сотрудников -->
-        <DataGrid x:Name="EmployeesDataGrid" Grid.Row="2" AutoGenerateColumns="False" 
-              SelectionMode="Extended" CanUserAddRows="False" IsReadOnly="True" 
-              MouseDoubleClick="EmployeesDataGrid_MouseDoubleClick">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="50"/>
-                <DataGridTextColumn Header="ФИО" Binding="{Binding FullName}" Width="250"/>
-                <DataGridTextColumn Header="Имя пользователя" Binding="{Binding Username}" Width="200"/>
-                <DataGridTextColumn Header="Роль" Binding="{Binding AccessRole}" Width="150"/>
-                <DataGridCheckBoxColumn Header="Активен" Binding="{Binding IsActive}" Width="100"/>
-                <DataGridTextColumn Header="Последняя авторизация" 
-                             Binding="{Binding LastLoginTime, StringFormat=\{0:dd.MM.yyyy HH:mm\}}" 
-                             Width="200"/>
-            </DataGrid.Columns>
-        </DataGrid>
+        <!-- Основной контент -->
+        <Grid Grid.Row="1" Margin="10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <!-- Группа добавления нового сотрудника -->
+            <GroupBox Header="Добавление нового сотрудника" Grid.Row="0" Margin="0,0,0,10">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="250"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="250"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="200"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <Label Grid.Column="0" Content="ФИО:" VerticalAlignment="Center" Margin="5"/>
+                    <TextBox Grid.Column="1" Text="{Binding FullName, UpdateSourceTrigger=PropertyChanged}" Margin="5"/>
+
+                    <Label Grid.Column="2" Content="Имя пользователя:" VerticalAlignment="Center" Margin="5"/>
+                    <TextBox Grid.Column="3" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" Margin="5"/>
+
+                    <Label Grid.Column="4" Content="Пароль:" VerticalAlignment="Center" Margin="5"/>
+                    <!-- PasswordBox не поддерживает двунаправленную привязку, делаем через событие -->
+                    <PasswordBox Grid.Column="5" Margin="5" PasswordChanged="PasswordBox_PasswordChanged"/>
+
+                    <Label Grid.Column="6" Content="Роль:" VerticalAlignment="Center" Margin="5"/>
+                    <ComboBox Grid.Column="7" ItemsSource="{Binding Roles}" SelectedItem="{Binding SelectedRole}" Margin="5"/>
+                </Grid>
+            </GroupBox>
+
+            <!-- Панель управления -->
+            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,0,0,10">
+                <Button Content="Добавить сотрудника" Width="160" Margin="5" Command="{Binding AddEmployeeCommand}"/>
+                <Button Content="Редактировать" Width="140" Margin="5" Command="{Binding EditEmployeeCommand}"/>
+                <Button Content="Удалить выбранных" Width="160" Margin="5" Command="{Binding DeleteEmployeesCommand}"/>
+
+                <TextBox Width="250" Margin="5" VerticalAlignment="Center"
+             ToolTip="Введите ФИО или имя пользователя для поиска"
+             Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"/>
+
+                <Button Content="Поиск" Width="120" Margin="5" Command="{Binding LoadEmployeesCommand}"/>
+                <Button Content="Экспорт" Width="160" Margin="5" Command="{Binding ExportCommand}"/>
+            </StackPanel>
+
+            <!-- DataGrid сотрудников -->
+            <DataGrid Grid.Row="2" AutoGenerateColumns="False" 
+              SelectionMode="Extended" CanUserAddRows="False" IsReadOnly="True"
+              helpers:MouseDoubleClickBehavior.Command="{Binding EmployeeDoubleClickCommand}"
+              ItemsSource="{Binding Employees}"
+              SelectedItem="{Binding SelectedEmployee, Mode=TwoWay}">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="50"/>
+                    <DataGridTextColumn Header="ФИО" Binding="{Binding FullName}" Width="250"/>
+                    <DataGridTextColumn Header="Имя пользователя" Binding="{Binding Username}" Width="200"/>
+                    <DataGridTextColumn Header="Роль" Binding="{Binding AccessRole}" Width="150"/>
+                    <DataGridCheckBoxColumn Header="Активен" Binding="{Binding IsActive}" Width="100"/>
+                    <DataGridTextColumn Header="Последняя авторизация" Binding="{Binding LastLoginTime, StringFormat=\{0:dd.MM.yyyy HH:mm\}}" Width="200"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
     </Grid>
 </Window>
