--- a/AccountingOfEquipmentInventoryManagementApp/Views/Windows/LoginWindow.xaml
+++ b/AccountingOfEquipmentInventoryManagementApp/Views/Windows/LoginWindow.xaml
@@ -25,14 +25,30 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,5,5,5">
+                <Button Content="─"
+                    Width="30"
+                    Height="30"
+                    Command="{Binding WindowControls.MinimizeCommand}"
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" />
+                <Button Content="☐"
+                    Width="30"
+                    Height="30"
+                    Command="{Binding WindowControls.MaximizeCommand}"
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" />
+                <Button Content="✖"
+                    Width="30"
+                    Height="30"
+                    Command="{Binding WindowControls.CloseCommand}"
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" />
+            </StackPanel>
             <!-- Заголовок -->
             <TextBlock Text="Вход в систему"
                        FontSize="22"
                        FontWeight="Bold"
                        Foreground="{StaticResource DarkBrush}"
                        HorizontalAlignment="Center"
-                       Margin="0,0,0,20"/>
+                       Margin="0,10,100,25"/>
 
             <!-- Контент -->
             <StackPanel Grid.Row="1" VerticalAlignment="Center">
@@ -75,6 +91,9 @@
                        HorizontalAlignment="Center"
                        Margin="0,10,0,0"/>
             </StackPanel>
+            
         </Grid>
+        
     </Border>
+    
 </Window>
