--- a/AccountingOfEquipmentInventoryManagementApp/Views/Windows/LoginWindow.xaml
+++ b/AccountingOfEquipmentInventoryManagementApp/Views/Windows/LoginWindow.xaml
@@ -5,8 +5,7 @@
         xmlns:helpers="clr-namespace:AccountingOfEquipmentInventoryManagementApp.Helpers"
         Title="Авторизация"
         Height="350" Width="400"
-        WindowStyle="None"
-        AllowsTransparency="True"
+        WindowStyle="None" AllowsTransparency="True"
         Background="Transparent"
         ResizeMode="NoResize">
 
@@ -25,23 +24,25 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,5,5,5">
-                <Button Content="─"
+            <Grid  Height="54" VerticalAlignment="Top" MouseLeftButtonDown="CustomTitleBar_MouseLeftButtonDown">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,5,5,5">
+                    <Button Content="─"
                     Width="30"
                     Height="30"
                     Command="{Binding WindowControls.MinimizeCommand}"
                     CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" />
-                <Button Content="☐"
+                    <Button Content="☐"
                     Width="30"
                     Height="30"
                     Command="{Binding WindowControls.MaximizeCommand}"
                     CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" />
-                <Button Content="✖"
+                    <Button Content="✖"
                     Width="30"
                     Height="30"
                     Command="{Binding WindowControls.CloseCommand}"
                     CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}" />
-            </StackPanel>
+                </StackPanel>
+            </Grid>
             <!-- Заголовок -->
             <TextBlock Text="Вход в систему"
                        FontSize="22"
@@ -91,9 +92,9 @@
                        HorizontalAlignment="Center"
                        Margin="0,10,0,0"/>
             </StackPanel>
-            
+
         </Grid>
-        
+
     </Border>
-    
+
 </Window>
