--- a/AccountingOfEquipmentInventoryManagementApp/Views/Windows/ManagerWindow.xaml
+++ b/AccountingOfEquipmentInventoryManagementApp/Views/Windows/ManagerWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:AccountingOfEquipmentInventoryManagementApp.ViewModels"
-        Title="Менеджер" Height="750" Width="1100">
+        WindowStyle="None" AllowsTransparency="True"  Title="Менеджер" Height="750" Width="1100">
 
     <Window.DataContext>
         <local:ManagerViewModel />
@@ -23,7 +23,7 @@
                 <Button Content="Создать категорию" Width="160" Margin="5" Command="{Binding AddCategoryCommand}"/>
             </StackPanel>
         </GroupBox>
-            <Grid>
+            <Grid  Height="48" VerticalAlignment="Top" MouseLeftButtonDown="CustomTitleBar_MouseLeftButtonDown">
                 <StackPanel Orientation="Horizontal"
         HorizontalAlignment="Right"
         VerticalAlignment="Top"
